# robot-kinematics

./: .gitignore  .gitmodules  README.md
blink/: Makefile  blink.cpp  compile_commands.json
complex_tasks/forward_kinematics/: CMakeLists.txt  compile_commands.json  fk.cpp  fk.h  record_hand_coordinates.cpp
complex_tasks/forward_kinematics/tools/: model.py
complex_tasks/inverse_kinematics/: CMakeLists.txt  actually_test.py  fk.cpp  ik.cpp  ik.h  main.cpp  main.py  not_main.py  test.py
complex_tasks/motion_primitives/: CMakeLists.txt  build.sh  motion_primitives.cpp  playback_motion_primitives.cpp
complex_tasks/motion_primitives/data/: home_to_sleep.csv  home_to_sleep_normalized_time.csv  sleep_to_home_normalized_time.csv
complex_tasks/motion_primitives/data_old/: home_to_sleep_normalized_time.csv
complex_tasks/motion_primitives/tools/: linear_regression.py
dynamixel_helper/: CMakeLists.txt  dynamixel_helper.cpp  dynamixel_helper.h
dynamixel_helper/include/dynamixel_helper/: dynamixel_helper.h
dynamixel_helper/src/: dynamixel_helper.cpp
forward_kinematics/: CMakeLists.txt  Makefile  fk.cpp  fk.h  motor_angles_xyz.csv  record_motor_dh.cpp  record_motors.cpp  test.csv
forward_kinematics/media/: Forward Kinematics.xcf
forward_kinematics/tools/: model.py
learn_dynamixel/complex_tasks/: CMakeLists.txt
learn_dynamixel/complex_tasks/forward_kinematics/: CMakeLists.txt  fk.h  record_hand_coordinates.cpp
learn_dynamixel/complex_tasks/inverse_kinematics/: CMakeLists.txt  ik.cpp
learn_dynamixel/complex_tasks/motion_primitives/: CMakeLists.txt  playback_motion_primitives.cpp
learn_dynamixel/simple_tasks/: CMakeLists.txt
learn_dynamixel/simple_tasks/blink/: CMakeLists.txt  blink.cpp
learn_dynamixel/simple_tasks/change_settings/: change_settings.cpp
learn_dynamixel/simple_tasks/playback_recorded_motors/: CMakeLists.txt  playback_recorded_motors.cpp
learn_dynamixel/simple_tasks/read_motor/: CMakeLists.txt
learn_dynamixel/simple_tasks/read_motors/: read_motors.cpp
learn_dynamixel/simple_tasks/record_motors/: CMakeLists.txt  record_motors.cpp
learn_dynamixel/simple_tasks/src/: blink.cpp  change_settings.cpp  playback_recorded_motors.cpp  read_motor.cpp  read_motors.cpp  record_motors.cpp  write_motor.cpp  write_motors.cpp
learn_dynamixel/simple_tasks/write_motor/: write_motor.cpp
learn_dynamixel/simple_tasks/write_motors/: CMakeLists.txt
libraries/DynamixelHelper/: CMakeLists.txt  build.sh  compile_commands.json  dynamixel_helper.cpp  dynamixel_helper.h
motion_primitives/: CMakeLists.txt  compile_commands.json  linear_regression.py  motion_primitives.cpp  motion_primitives.h  normalize_time.py  playback_motor.cpp  position_normalized_time.csv
motion_primitives/data/: draw_line.csv  home_to_sleep.csv  jointStatesQ1_14_normalized_time.csv  jointStatesQ2_14_normalized_time.csv  jointStatesQ3_14_normalized_time.csv  jointStatesQ4_14_normalized_time.csv  positions.csv  sleep_to_home.csv
motion_primitives/tools/: linear_regression.py  normalize_time.py
oopified/: BasisFunction.h  CMakeLists.txt  MP.cpp  MP.h  Robot.cpp  Robot.h  build.sh  compile_commands.json  fk.cpp  fk.h  gaussian.cpp  gaussian.h  gaussian_test.cpp  gmm.cpp  gmm.h  gmm_test.cpp  ik.h  ik.py  main.cpp  matrix.h  transform.cpp  transform.h
paper/: main.tex
read_motor/: Makefile  read_motor.cpp
read_motors/: CMakeLists.txt  read_motors.cpp
record_motors/: compile_commands.json  record_motors.cpp
ros/: Dockerfile  docker-compose.yml
ros/ros2_ws/log/: latest_build  latest_test
ros/ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros/ros2_ws/src/cpp_pubsub/src/: subscriber_member_function.cpp
ros/thesis_ros_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros/thesis_ros_ws/src/tutorial/: CMakeLists.txt
ros/thesis_ros_ws/src/tutorial/scripts/: add_two_ints_client.py  add_two_ints_server.py  listener.py
ros/thesis_ros_ws/src/tutorial/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
ros2/: README.md
ros2/src/dynamixel_helper/: CMakeLists.txt  package.xml
ros2/src/dynamixel_helper/src/: dynamixel_helper.cpp
ros2/src/my_package/: package.xml
ros2/src/simple_pubsub/: CMakeLists.txt  package.xml
ros2/src/simple_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2/src/simple_srvcli/: CMakeLists.txt  package.xml
ros2/src/simple_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2/src/tf2_tutorial_cpp/: CMakeLists.txt  package.xml
ros2/src/wx200_control/: CMakeLists.txt  package.xml
ros2/src/wx200_control/launch/: control.launch.py  control.launch.xml
ros2/src/wx200_control/rviz/: urdf.rviz  urdf.rviz.yaml
ros2/src/wx200_control/src/: motor_pub.cpp  state_publisher.cpp
ros2/src/wx200_control/urdf/: test.urdf  urdf.xsd  wx200.urdf.xml
ros2_ws/: README.md
ros2_ws/src/wx200_control/: CMakeLists.txt  package.xml
ros2_ws/src/wx200_control/launch/: control.launch.py  control.launch.xml
ros2_ws/src/wx200_control/rviz/: urdf.rviz.yaml
ros2_ws/src/wx200_control/src/: motor_pub.cpp  state_publisher.cpp
ros2_ws/src/wx200_control/src/ik_srv/: fk.cpp  fk.h  ik.h  ik_server.cpp
ros_ws/devel/: .rosinstall  local_setup.sh  setup.sh
simple_tasks/blink/: CMakeLists.txt  blink.cpp
simple_tasks/change_settings/: CMakeLists.txt
simple_tasks/hello/: hello
simple_tasks/playback_recorded_motors/: CMakeLists.txt  playback_recorded_motors.cpp
simple_tasks/read_motor/: CMakeLists.txt  compile_commands.json  read_motor.cpp
simple_tasks/read_motors/: CMakeLists.txt  build.sh  compile_commands.json
simple_tasks/record_motors/: CMakeLists.txt  build.sh  record_motors.cpp
simple_tasks/write_motor/: CMakeLists.txt  write_motor.cpp
simple_tasks/write_motors/: CMakeLists.txt  write_motors.cpp
write_motor/: compile_commands.json
write_motors/: CMakeLists.txt  compile_commands.json  write_motors.cpp
write_wrist/: Makefile  compile_commands.json  write_wrist.cpp
(+152 files in other folders)
