<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_helper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dgardner365@gmail.com">goose</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dynamixel_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
