<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wx200_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dgardner365@gmail.com">devon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robot_state_publisher</depend>
  <depend>wx200_control_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
